--- a/EndlessRunner/.vscode/settings.json
+++ b/EndlessRunner/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "AmiguRunner.sln"
+    "dotnet.defaultSolution": "EndlessRunner.sln"
 }
